--- a/rederrorfrontend/styles/globals.css
+++ b/rederrorfrontend/styles/globals.css
@@ -1,26 +1,22 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
 * {
   box-sizing: border-box;
 }
-
+* html,
+* body {
+  padding: 0;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+* a {
+  color: inherit;
+  text-decoration: none;
+}
 @media (prefers-color-scheme: dark) {
-  html {
+  * html {
     color-scheme: dark;
   }
-  body {
+  * body {
     color: white;
     background: black;
   }
-}
+}/*# sourceMappingURL=globals.css.map */
